# cc-bot

./: .gitignore  CMakeLists.txt  Cargo.toml
src/: main.cc
